removed all crap we dont need at this moment

--- a/custom_components/gas_price/manifest.json
+++ b/custom_components/gas_price/manifest.json
@@ -2,7 +2,7 @@
   "domain": "gas_prices",
   "name": "Gas Prices",
   "codeowners": [
-    "@ludeeus"
+    "@FiekBuurman"
   ],
   "config_flow": true,
   "documentation": "https://github.com/FiekBuurman/gas_price",
